tests/sources/invalid/generics/generic_func_empty_type_args.fire
// Parser error: explicit generic function call with an empty type
// argument list.

fn identity<T>(value: T) -> T {
    return value;
}

fn generic_func_empty_type_args() -> void {
    x: int32 = identity<>(5);  //~ ERROR FS-PARSE-0010 @25
//~^ ERROR FS-PARSE-0003 @16
}
